--- a/app/views/layouts/households.html.erb
+++ b/app/views/layouts/households.html.erb
@@ -18,6 +18,7 @@
       width:900px;
       margin:0px auto;
       text-align:left;
+      padding-bottom: 40px;
       }
     td, th {
       text-align: left;
