Add logout link to households index.

--- a/app/views/households/index.html.erb
+++ b/app/views/households/index.html.erb
@@ -12,3 +12,6 @@
   Ruby version: <%= RUBY_VERSION %><br />
   Log level: <%= Rails.logger.level %><br />
 </p>
+<p>
+  <%= link_to 'Logout', :controller => 'admin', :action => 'logout' %>
+</p>
