--- a/app/views/households/index.html.erb
+++ b/app/views/households/index.html.erb
@@ -2,9 +2,9 @@
 <p>
   <strong><%= number_with_delimiter(@count) %></strong> households in the database.<br />
   <%= link_to 'List household data', :action => 'list' %><br />
-  <%= link_to 'Import household data', :action => 'import' %><br />
   <%= link_to 'Chart household data', :action => 'chart' %><br />
-  <%= link_to 'Delete household data', :action => 'delete_all' %><br />
+  <%= link_to 'Import household data', :action => 'import' %><br />
+  <%= link_to 'Delete household data', :action => 'delete_all' %>
 </p>
 <p>
   Rails environment: <%= Rails.env %><br />
@@ -13,5 +13,6 @@
   Log level: <%= Rails.logger.level %><br />
 </p>
 <p>
+  <%= link_to 'Dev team', :action => 'team' %><br />
   <%= link_to 'Logout', :controller => 'admin', :action => 'logout' %>
 </p>
