Correct Barbara's job title.

--- a/app/views/households/team.html.erb
+++ b/app/views/households/team.html.erb
@@ -5,7 +5,7 @@
   </div>
   <h3>&#9668; Building the website</h3>
   <p>
-    Concern data analyst Barbara Wambui and volunteer computer programmer John Skinner slice some data and write some code.
+    Concern data scientist Barbara Kagima and volunteer computer programmer John Skinner slice some data and write some code.
   </p>
   <p>
     Nairobi &mdash; February 2014
