--- a/app/views/layouts/households.html.erb
+++ b/app/views/layouts/households.html.erb
@@ -29,10 +29,10 @@
       margin-top: -25px; /* negative value of footer height */
       height: 25px;
       clear:both;
-      background-color: #00734A;
+      background-color: #A14F0C;
     }
     footer div {
-      padding-top: 3px;
+      padding-top: 5px;
       width:900px;
       margin:0px auto;
       text-align:left;
