Style chart button.

--- a/app/views/households/chart.html.erb
+++ b/app/views/households/chart.html.erb
@@ -82,7 +82,7 @@
         <tr>
           <td></td>
           <td style="padding-top: 10px">
-            <%= submit_tag 'Chart', {} %>
+            <%= submit_tag 'Chart', {:id => 'chart_button'} %>
           </td>
         </tr>
         <% if @count %>
