--- a/app/views/layouts/households.html.erb
+++ b/app/views/layouts/households.html.erb
@@ -14,8 +14,13 @@
       margin: 0 0 100px;
       padding:0px;
       text-align:center;
-      }
+    }
     html, body {height: 100%;}
+    header {
+      background-color: #00734A;
+      width: 100%;
+      margin-bottom: 25px;
+    }
     /* sticky footer stuff */
     #wrap {
       min-height: 100%;
@@ -54,15 +59,17 @@
       margin: 0;
       padding: 0;
     }
-    select {width: 150px;}
-    header {
-      background-color: #00734A;
-      width: 100%;
-      margin-bottom: 25px;
-    }
     select {
+      width: 150px;
       margin: 0;
       padding: 0;
+      border: 1px solid silver;
+    }
+    #chart_button {
+      padding: 10px;
+      border: none;
+      background-color: #00734A;
+      color: white;
     }
   </style>
 </head>
