Tone down "arctic white" background.

--- a/app/views/households/chart.html.erb
+++ b/app/views/households/chart.html.erb
@@ -131,6 +131,7 @@
         <% if @chart_type == 'bar' %>
           var data = google.visualization.arrayToDataTable(<%= formatted_table.html_safe %>);
           var chart_options = {
+            backgroundColor: { fill: "#F2F2F2" },
             title: '<%= chart_title %>',
             bar: { groupWidth: '75%' },
             isStacked: '<%= params[:stack] == "s" %>',
@@ -152,6 +153,7 @@
           <% end %>
           data.addRows(<%= formatted_table.html_safe %>);
           var chart_options = {
+            backgroundColor: { fill: "#F2F2F2" },
             title: '<%= chart_title %>',
             curveType:'function',
             lineWidth: 2,
@@ -174,11 +176,11 @@
           table.draw(data, table_options);
       }
     </script>
-    <div style="float: right; background-color: white; width: 670px; border: solid silver 1px;">
+    <div style="float: right; background-color: #F2F2F2; width: 670px; border: solid silver 1px;">
       <div id="chart_div" style="height: 392px; width: 100%;"></div>
     </div>
   <% else %>
-    <div style="float: right; background-color: white; width: 670px; height: 230px; border: solid silver 1px;">
+    <div style="float: right; background-color: #F2F2F2; width: 670px; height: 230px; border: solid silver 1px;">
       <div style="text-align: center; margin-top: 100px;">
         &#9668; Submit query to begin
       </div>
