--- a/app/views/layouts/households.html.erb
+++ b/app/views/layouts/households.html.erb
@@ -64,6 +64,10 @@
       margin: 0;
       padding: 0;
       border: 1px solid silver;
+      background-color: #F4F4F4;
+    }
+    input {
+      background-color: #F4F4F4;
     }
     #chart_button {
       padding: 10px;
