--- a/app/views/households/delete_all.html.erb
+++ b/app/views/households/delete_all.html.erb
@@ -6,7 +6,7 @@
   <%= submit_tag "Yes, delete all household records" %>
 <% end %>
 <p>
-  There are <strong><%= @count %></strong> household records in the database now.
+  There are <strong><%= number_with_delimiter(@count) %></strong> household records in the database now.
   <% if @count == 0 %>
     <%= link_to 'Import .csv data file?', :action => 'import' %>
   <% else %>
