Make horizontal bar chart scale start from zero.

--- a/app/views/households/chart.html.erb
+++ b/app/views/households/chart.html.erb
@@ -194,6 +194,7 @@
             backgroundColor: { fill: "#F2F2F2" },
             title: '<%= chart_title %>',
             series: [{color: '#A14F0C'}],
+            hAxis: {minValue: 0},
             vAxis: {title: '<%= x %>',  titleTextStyle: {color: 'black'}}
           };
 
