--- a/app/views/households/chart.html.erb
+++ b/app/views/households/chart.html.erb
@@ -193,6 +193,7 @@
           var options = {
             backgroundColor: { fill: "#F2F2F2" },
             title: '<%= chart_title %>',
+            legend: 'none',
             series: [{color: '#A14F0C'}],
             hAxis: {minValue: 0},
             vAxis: {title: '<%= x %>',  titleTextStyle: {color: 'black'}}
